# NumerikPraktikum

./: .gitignore  Blockdiagramm_Numerik_Gruppe3.4docx.docx  CMakeLists.txt  ReadMe.txt
FlammenbilderRohdaten/: Hauptflamme.txt  Pilotflamme1.txt  Pilotflamme2.txt  Zeile170.txt  __READ_ME.txt  gnuplot  makePlotsWithGnuplot
include/: Polynom.h  Process.h  Utils.h
include/IO/: Reader.h  Writer.h
src/: Main.cpp  Polynom.cpp  Process.cpp  Utils.cpp
src/IO/: Reader.cpp  Writer.cpp
